<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.PopupOverlay"
        android:id="@+id/view3">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Your Dosha :"
        android:id="@+id/yourdosha"
        android:layout_below="@+id/view3"
        android:layout_alignParentStart="true"
        android:padding="20dp"
        style="@style/question"
        android:textColor="#050505" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="VATA"
        android:id="@+id/doshaName"
        android:padding="20dp"
        android:layout_below="@+id/view3"
        android:layout_toEndOf="@+id/yourdosha"
        android:layout_marginStart="34dp"
        style="@style/question"/>

    <TextView
        style="@style/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fifthquestion"
        android:id="@+id/textView10"
        android:layout_below="@+id/yourdosha"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        style="@style/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifthanswer"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true" />

    <TextView
        style="@style/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sixthquestion"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        style="@style/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sixthanswer"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView12"
        android:layout_toStartOf="@+id/doshaName"
        android:layout_alignParentEnd="true" />


</RelativeLayout>