<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:fillViewport="false"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="1"

        >


        <EditText
            android:id="@+id/searchText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:clickable="true"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/search"
            android:textAlignment="gravity"
            android:textColor="#cfcdcd" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:background="#ffffff"
            android:queryHint="Search" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <ImageButton
                android:id="@+id/category"
                style="@style/mainPageIcon"
                android:layout_width="wrap_content"
                android:contentDescription="@string/app_name"
                android:onClick="categoryClick"
                android:src="@mipmap/icon_category" />

            <ImageButton
                android:id="@+id/topSeller"
                style="@style/mainPageIcon"
                android:layout_width="wrap_content"
                android:contentDescription="@string/seller"
                android:src="@mipmap/icon_top_seller" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/bath_body"
                style="@style/mainPageIcon"
                android:layout_width="wrap_content"
                android:contentDescription="@string/seller"
                android:src="@mipmap/icon_bath_body" />

            <ImageButton
                android:id="@+id/skin_care"
                style="@style/mainPageIcon"
                android:layout_width="wrap_content"
                android:contentDescription="@string/seller"
                android:src="@mipmap/icon_skin_care" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/suplement"
                style="@style/mainPageIcon"
                android:layout_width="wrap_content"

                android:contentDescription="@string/seller"
                android:src="@mipmap/icon_supplement" />

            <ImageButton
                android:id="@+id/beverage"
                style="@style/mainPageIcon"
                android:layout_width="wrap_content"
                android:contentDescription="@string/seller"
                android:src="@mipmap/icon_beverages" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/food"
                style="@style/mainPageIcon"
                android:layout_width="wrap_content"
                android:contentDescription="@string/seller"
                android:src="@mipmap/icon_food" />

            <ImageButton
                android:id="@+id/spicy"
                style="@style/mainPageIcon"
                android:layout_width="match_parent"
                android:contentDescription="@string/seller"
                android:src="@mipmap/icon_spicy" />
        </TableRow>


    </TableLayout>

</LinearLayout>